Fixing few alignment and styles

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,3 +27,6 @@ body {
 .date-picker-input{
   height: 50px;
 }
+.centre {
+  text-align: center;
+}
